# cpp_grpc

./: .gitignore
client/: CMakeLists.txt
client/src/: client_functions.cpp  client_functions.h  main.cpp
proto/: CMakeLists.txt
proto/myproto/: agent.proto  genop.proto  image.proto  profiling.proto  tensorflow.proto  torch.proto
server/: CMakeLists.txt
server/src/: image_class_torch_dirty.cpp  main.cpp  service_functions.cpp  service_registry.h
server/src/grpc/: grpc_genop.cpp  grpc_image.cpp  grpc_resource.cpp  grpc_session.cpp  grpc_tensor.cpp  grpc_torch.cpp
server/src/service/: service_functions.cpp  service_registry.h
